<resources>
    <string name="app_name">Aquarech Farmer</string>

    <string name="intro_1_header">We help you improve your fish farming business.</string>
    <string name="intro_1_sub_text">Keep track of the fish progress in your farm by monitoring the monthly feeding and growth of the fish.</string>
    <string name="skip">Skip</string>
    <string name="intro3_btm_txt">Already a member? Log in</string>
    <string name="intro_3_header">We provide a market for you to sell your fish</string>
    <string name="intro_3_subtext">Not sure about where you can sell your fish? Let us know when they are ready of harvesting and we will come do the work and pay you.</string>
    <string name="intro_2_header">Order feeds from anywhere directly from your phone.</string>
    <string name="intro_2_subtext">Through our marketplace, you can order fish feeds and we will deliver directly to your farm.</string>

    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member?</string>
    <string name="login">Log In</string>
    <string name="submit">Submit</string>

    <string name="welcome_back">Welcome Back</string>
    <string name="enter_details">Please add your personal details to continue</string>
    <string name="phone">Phone</string>
    <string name="pass">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="wrong_user_details">Wrong username &amp; password combination. Try again.</string>
    <string name="sign_in">Sign In</string>
    <string name="new_to_aquarech">New to Aquarech?</string>
    <string name="join_today">Join Today</string>

    <string name="welcome_to_aquarech">Welcome to Aquarech!</string>
    <string name="Create_username_Passwpord">Create your username and password</string>
    <string name="terms">By creating your account, you agree to Aquarech\'s</string>
    <string name="terms1">Terms of service </string>
    <string name="terms2">Privacy and policy</string>
    <string name="connecctor">&amp;</string>
    <string name="agree_to_terms">By creating your account, you agree to Aquarech\'s <br /><u>Terms of Service</u> &amp; <u>Privacy Policy</u></string>
    <string name="reset_password_text">Please enter the last phone number that you can remember that you might have used to register</string>
    <string name="reset_password_text1">We will send you a password reset link to this number</string>

    <string name="input_err_msg">Field is required</string>
    <string name="invalid_phone_msg">Enter a valid phone number</string>
    <string name="invalid_pwd_msg">Password must be at least eight characters</string>
    <string name="invalid_pwd_match">Passwords do not match</string>
    <string name="create_account_success_msg">Account created successfully</string>

    <string name="insert_error">Unable to insert record</string>

    <string name="account_registered_msg">Account already exist. Please proceed and log in</string>
    <string name="registration_successful_msg">User Registered Successfully</string>
    <string name="registration_failed_msg">Registration failed</string>
    <string name="login_success">Login successful</string>
    <string name="pwd_update_msg">Password updated successfully!</string>
    <string name="pwd_failed_update_msg">Failed to update password</string>

    <string name="user_deleted_msg">user deleted successfully</string>
    <string name="delete_failed_msg">user not found or delete failed</string>
    <string name="request_delete_confirmation">Are you sure you want delete this user</string>

</resources>