<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/hw_25">

        <!--logo-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_logo"
            android:layout_width="@dimen/hw_200"
            android:layout_height="@dimen/hw_80"
            android:layout_marginTop="@dimen/hw_50"
            android:src="@drawable/ic_aquarech"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="-20dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register_header_tV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hw_20"
            android:fontFamily="@font/extra_bold"
            android:text="@string/welcome_to_aquarech"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register_subheader_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Create_username_Passwpord"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_header_tV" />

        <!--phone input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hw_20"
            android:background="@drawable/input_text_selector"
            android:hint="@string/phone"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@id/register_subheader_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/hw_10"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hw_10"
            android:background="@drawable/input_text_selector"
            android:hint="@string/pass"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@id/phone_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/hw_10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- confirm password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hw_10"
            android:background="@drawable/input_text_selector"
            android:hint="@string/confirm_password"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@id/password_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/hw_10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--create account button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hw_10"
            android:paddingStart="@dimen/hw_24"
            android:paddingTop="@dimen/hw_12"
            android:paddingEnd="@dimen/hw_24"
            android:paddingBottom="@dimen/hw_12"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorPrimaryBlue"
            app:cornerRadius="@dimen/hw_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_layout" />

        <!-- terms and conditions section-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/tos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hw_10"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/create_account">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:gravity="center"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms1"
                    android:textColor="@color/colorPrimaryBlue" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connecctor" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms2"
                    android:textColor="@color/colorPrimaryBlue" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/terms_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree_to_terms"
            android:textColor="@color/colorIntroDesc"
            android:lineSpacingExtra="@dimen/hw_5"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="@dimen/hw_10"
            android:gravity="center"
            android:textStyle="bold"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/tos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_goneMarginTop="@dimen/hw_20"
            android:layout_marginBottom="@dimen/hw_30"/>

        <!-- log in section -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/login_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/hw_10"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/already_a_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_member"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/hw_5"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryBlue"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>