<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/hw_25">

        <!-- Logo -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/hw_200"
            android:layout_height="@dimen/hw_80"
            android:src="@drawable/ic_aquarech"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/hw_50"
            android:layout_marginStart="-20dp"/>

        <!-- Header -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/welcome_back"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:lineSpacingExtra="@dimen/hw_3"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/hw_20"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_details"
            android:textColor="@color/gray600"
            android:lineSpacingExtra="@dimen/hw_5"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"/>

        <!-- Phone Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hw_20"
            android:hint="@string/phone"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@id/subheader"
            android:background="@drawable/input_text_selector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="phone"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/hw_10"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hw_10"
            android:hint="@string/pass"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/phone_layout"
            android:background="@drawable/input_text_selector"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/hw_10"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forgot Password -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:textColor="@color/colorPrimaryBlue"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/hw_20"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <!-- Error Text -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/wrong_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_user_details"
            android:textColor="@color/colorEditTextError"
            app:layout_constraintTop_toBottomOf="@id/forgot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/hw_10"
            android:visibility="gone"/>

        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorPrimaryBlue"
            app:cornerRadius="@dimen/hw_10"
            android:paddingStart="@dimen/hw_24"
            android:paddingEnd="@dimen/hw_24"
            android:paddingTop="@dimen/hw_12"
            android:paddingBottom="@dimen/hw_12"
            app:layout_constraintTop_toBottomOf="@id/wrong_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/hw_10" />

        <!-- Signup Section -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/signup_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/hw_20"
            android:layout_marginBottom="@dimen/hw_10">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_to_aquarech"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_today"
                android:textColor="@color/colorPrimaryBlue"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/hw_5"
                android:clickable="true"
                android:focusable="true"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>