<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/hw_25">

    <!-- Logo -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/hw_200"
        android:layout_height="@dimen/hw_80"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="@dimen/hw_50"
        android:src="@drawable/ic_aquarech"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TODO: make header text appearance uniform -->
    <!--header-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hw_20"
        android:fontFamily="@font/extra_bold"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <!--subtext-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reg_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_tv" />

    <!--subtext1-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reg_subtext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hw_5"
        android:text="@string/reset_password_text1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_subtext" />

    <!-- phone_input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hw_20"
        android:background="@drawable/input_text_selector"
        android:hint="@string/phone"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/reg_subtext1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/hw_10"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--submit button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hw_10"
        android:paddingStart="@dimen/hw_24"
        android:paddingTop="@dimen/hw_12"
        android:paddingEnd="@dimen/hw_24"
        android:paddingBottom="@dimen/hw_12"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorPrimaryBlue"
        app:cornerRadius="@dimen/hw_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>