<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ViewPager for slides -->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slider_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_section" />

    <!-- Bottom Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/activity_horizontal_margin">

        <!-- Dots Indicator (Navigation) -->
        <LinearLayout
            android:id="@+id/layout_dots"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/hw_35"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/hw_10"/>

        <!-- Call to Action (Initially Hidden) -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/call_to_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@id/layout_dots"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/colorWhite"
                app:backgroundTint="@color/colorPrimaryBlue"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:cornerRadius="@dimen/hw_10"
                android:paddingTop="@dimen/hw_12"
                android:paddingBottom="@dimen/hw_12"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:strokeWidth="0dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/hw_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_member"
                    android:textColor="@color/gray600"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryBlue"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/hw_5"
                    android:background="?selectableItemBackgroundBorderless"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:clickable="true"
                    android:focusable="true"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>